--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Constructo AI | ERP Construction Québec - Gestion de chantiers</title>
-    <meta name="description" content="Constructo AI est un système ERP complet pour la construction au Québec. 30+ modules intégrés (Devis, Projets, Comptabilité, TimeTracker, CRM, Inventaire, Subventions), 60 experts IA spécialisés, 100% conforme RBQ, CCQ et Loi 16. Essai 7 jours.">
+    <meta name="description" content="Constructo AI est un système ERP complet pour la construction au Québec. 31+ modules intégrés (Devis, Projets, Comptabilité, TimeTracker, CRM, Inventaire, Immobilier, Subventions), 61 experts IA spécialisés, 100% conforme RBQ, CCQ et Loi 16. Essai 7 jours.">
     <meta name="keywords" content="ERP construction, logiciel construction Québec, gestion projet construction, devis construction, comptabilité construction, RBQ, CCQ, Loi 16, IA construction, Constructo AI, logiciel entrepreneur, soumission construction, gestion chantier">
     <meta name="author" content="Sylvain Leduc - Constructo AI Inc.">
     <meta name="robots" content="index, follow">
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://constructoai.ca/">
     <meta property="og:title" content="Constructo AI | ERP intelligent pour la construction au Québec">
-    <meta property="og:description" content="Gérez votre entreprise de construction avec 30+ modules intégrés et 60 experts IA. 100% conforme RBQ, CCQ, Loi 16. Essai 7 jours.">
+    <meta property="og:description" content="Gérez votre entreprise de construction avec 31+ modules intégrés et 61 experts IA. 100% conforme RBQ, CCQ, Loi 16. Essai 7 jours.">
     <meta property="og:image" content="https://constructoai.ca/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://constructoai.ca/">
     <meta name="twitter:title" content="Constructo AI | ERP intelligent pour la construction au Québec">
-    <meta name="twitter:description" content="Gérez votre entreprise de construction avec 30+ modules intégrés et 60 experts IA. 100% conforme RBQ, CCQ, Loi 16.">
+    <meta name="twitter:description" content="Gérez votre entreprise de construction avec 31+ modules intégrés et 61 experts IA. 100% conforme RBQ, CCQ, Loi 16.">
     <meta name="twitter:image" content="https://constructoai.ca/og-image.png">
     <meta name="twitter:site" content="@constructoai">
 
@@ -43,7 +43,7 @@
         "name": "Constructo AI",
         "applicationCategory": "BusinessApplication",
         "operatingSystem": "Web",
-        "description": "Système ERP complet pour la construction au Québec avec 30+ modules intégrés et 60 experts IA spécialisés.",
+        "description": "Système ERP complet pour la construction au Québec avec 31+ modules intégrés et 61 experts IA spécialisés.",
         "url": "https://constructoai.ca",
         "author": {
             "@type": "Person",
@@ -2015,10 +2015,10 @@
             <h1>Constructo AI</h1>
             <p class="hero-subtitle">L'ERP qui comprend votre métier d'entrepreneur au Québec</p>
             <p class="hero-description">
-                Centralisez vos opérations avec une solution intégrée. <strong>30+ modules conçus pour l'industrie de la construction</strong> : Soumissions avec 140+ items prédéfinis, Suivi de projets en temps réel, Comptabilité TPS/TVQ automatisée, Pointage des 61 postes CCQ, Gestion des sous-traitants et fournisseurs, Inventaire de matériaux, Subventions Québec 2025, Qualification de prospects (B.A.T.), Fonds de prévoyance Loi 16, Gantt et Kanban.
+                Centralisez vos opérations avec une solution intégrée. <strong>31+ modules conçus pour l'industrie de la construction</strong> : Soumissions avec 140+ items prédéfinis, Suivi de projets en temps réel, Comptabilité TPS/TVQ automatisée, Pointage des 61 postes CCQ, Gestion des sous-traitants et fournisseurs, Inventaire de matériaux, Immobilier et financement construction, Subventions Québec 2025, Qualification de prospects (B.A.T.), Fonds de prévoyance Loi 16, Gantt et Kanban.
             </p>
             <p class="hero-description" style="margin-top: -15px;">
-                <strong>60 experts IA spécialisés</strong> — l'équivalent d'un estimateur, d'un comptable et d'un directeur de chantier disponibles en permanence. <strong>100% conforme</strong> aux exigences RBQ, CCQ et CNESST. Concentrez-vous sur vos projets, nous gérons l'administratif.
+                <strong>61 experts IA spécialisés</strong> — l'équivalent d'un estimateur, d'un comptable et d'un directeur de chantier disponibles en permanence. <strong>100% conforme</strong> aux exigences RBQ, CCQ et CNESST. Concentrez-vous sur vos projets, nous gérons l'administratif.
             </p>
             <div class="hero-buttons">
                 <a href="https://app.constructoai.ca/" class="btn btn-primary">
@@ -2040,7 +2040,7 @@
 
             <div class="stats-grid">
                 <div class="stat-item">
-                    <div class="stat-number">30+</div>
+                    <div class="stat-number">31+</div>
                     <div class="stat-label">Modules pour vos chantiers</div>
                 </div>
                 <div class="stat-item">
@@ -2048,7 +2048,7 @@
                     <div class="stat-label">Items soumission prêts</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">60</div>
+                    <div class="stat-number">61</div>
                     <div class="stat-label">Experts IA à consulter</div>
                 </div>
                 <div class="stat-item">
@@ -2139,7 +2139,7 @@
     <section class="solution-section" id="fonctionnalites">
         <div class="solution-inner">
             <h2 class="section-title">Des outils numériques adaptés à votre réalité</h2>
-            <p class="section-subtitle">30+ modules développés spécifiquement pour les professionnels de la construction</p>
+            <p class="section-subtitle">31+ modules développés spécifiquement pour les professionnels de la construction</p>
             <h3>Les fonctionnalités essentielles au quotidien</h3>
 
             <div class="features-grid">
@@ -2231,6 +2231,18 @@
                     <h4>Fonds de Prévoyance</h4>
                     <p>Spécialisé dans les condominiums ou les immeubles multi-logements? Module Loi 16 complet : études financières sur 25 ans, composantes majeures, calcul des réserves. Rapports conformes pour les syndicats de copropriété.</p>
                 </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
+                            <line x1="9" y1="22" x2="15" y2="22"/>
+                            <line x1="9" y1="18" x2="15" y2="18"/>
+                            <path d="M12 2v7"/>
+                        </svg>
+                    </div>
+                    <h4>🏗️ Immobilier & Financement <span style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; font-size: 0.7em; padding: 2px 6px; border-radius: 4px; margin-left: 6px;">NOUVEAU</span></h4>
+                    <p>Gestion complète projets construction multi-logements : prospection terrains, financement bancaire (7 banques québécoises), déblocages progressifs, calcul SCHL, suivi locations/ventes. Expert IA Claude Opus 4.5 pour analyse projets, optimisation financement et conseils construction.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -2297,7 +2309,7 @@
                     <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
                     <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
                 </svg>
-                60 experts IA spécialisés en construction
+                61 experts IA spécialisés en construction
             </h2>
             <p style="color: rgba(255,255,255,0.8); margin-bottom: 24px;">Posez vos questions techniques — estimation, normes, méthodes — et obtenez des réponses précises de professionnels du secteur</p>
             <div class="experts-grid">
@@ -2389,7 +2401,7 @@
                             <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"/>
                         </svg>
                     </div>
-                    <h3>60 experts disponibles 24/7</h3>
+                    <h3>61 experts disponibles 24/7</h3>
                     <p>Besoin d'une estimation pour du gypse niveau 5? D'un calcul de poutre? D'assistance pour une soumission? L'IA répond avec l'expertise d'un professionnel du domaine.</p>
                 </div>
                 <div class="why-card">
@@ -2633,7 +2645,7 @@
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>Tout. Les 30+ modules (soumissions, projets, facturation, pointage, inventaire, etc.), les 60 experts IA pour vos questions techniques, votre espace privé sécurisé, le support téléphone, les mises à jour. <strong>Tous vos employés peuvent l'utiliser</strong> — pas de frais par utilisateur. C'est votre bureau complet dans le cloud.</p>
+                    <p>Tout. Les 31+ modules (soumissions, projets, facturation, pointage, inventaire, immobilier, etc.), les 61 experts IA pour vos questions techniques, votre espace privé sécurisé, le support téléphone, les mises à jour. <strong>Tous vos employés peuvent l'utiliser</strong> — pas de frais par utilisateur. C'est votre bureau complet dans le cloud.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -2753,7 +2765,7 @@
                     </a>
                     <a href="https://app.constructoai.ca/" class="quick-action-btn green">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>
-                        Les 60 experts IA
+                        Les 61 experts IA
                     </a>
                     <a href="https://app.constructoai.ca/" class="quick-action-btn pink">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="12" y1="1" x2="12" y2="23"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/></svg>
@@ -2893,7 +2905,7 @@
                         <img src="logo.png" alt="Constructo AI" style="width: 36px; height: auto;">
                         Constructo AI
                     </a>
-                    <p>Le système de gestion bâti par un entrepreneur, pour les entrepreneurs. 30+ modules pour gérer vos chantiers, 60 experts IA de la construction, 100% conforme RBQ, CCQ et Loi 16.</p>
+                    <p>Le système de gestion bâti par un entrepreneur, pour les entrepreneurs. 31+ modules pour gérer vos chantiers, 61 experts IA de la construction, 100% conforme RBQ, CCQ et Loi 16.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Explorer</h4>
