--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Constructo AI | ERP Construction Québec - Gestion de chantiers</title>
-    <meta name="description" content="Constructo AI est un système ERP complet pour la construction au Québec. Prêt en 5 minutes, inscription incluse. 34+ modules intégrés, 61 experts IA spécialisés, 100% conforme RBQ, CCQ et Loi 16. Essai gratuit 7 jours.">
+    <meta name="description" content="Constructo AI est un système ERP complet pour la construction au Québec. Prêt en 5 minutes, inscription incluse. 35+ modules intégrés, 61 experts IA spécialisés, 100% conforme RBQ, CCQ et Loi 16. Essai gratuit 7 jours.">
     <meta name="keywords" content="ERP construction, logiciel construction Québec, gestion projet construction, devis construction, comptabilité construction, RBQ, CCQ, Loi 16, IA construction, Constructo AI, logiciel entrepreneur, soumission construction, gestion chantier">
     <meta name="author" content="Sylvain Leduc - Constructo AI Inc.">
     <meta name="robots" content="index, follow">
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://constructoai.ca/">
     <meta property="og:title" content="Constructo AI | ERP intelligent pour la construction au Québec">
-    <meta property="og:description" content="Gérez votre entreprise de construction avec 34+ modules intégrés et 61 experts IA. 100% conforme RBQ, CCQ, Loi 16. Essai 7 jours.">
+    <meta property="og:description" content="Gérez votre entreprise de construction avec 35+ modules intégrés et 61 experts IA. 100% conforme RBQ, CCQ, Loi 16. Essai 7 jours.">
     <meta property="og:image" content="https://constructoai.ca/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://constructoai.ca/">
     <meta name="twitter:title" content="Constructo AI | ERP intelligent pour la construction au Québec">
-    <meta name="twitter:description" content="Gérez votre entreprise de construction avec 34+ modules intégrés et 61 experts IA. 100% conforme RBQ, CCQ, Loi 16.">
+    <meta name="twitter:description" content="Gérez votre entreprise de construction avec 35+ modules intégrés et 61 experts IA. 100% conforme RBQ, CCQ, Loi 16.">
     <meta name="twitter:image" content="https://constructoai.ca/og-image.png">
     <meta name="twitter:site" content="@constructoai">
 
@@ -43,7 +43,7 @@
         "name": "Constructo AI",
         "applicationCategory": "BusinessApplication",
         "operatingSystem": "Web",
-        "description": "Système ERP complet pour la construction au Québec avec 34+ modules intégrés et 61 experts IA spécialisés.",
+        "description": "Système ERP complet pour la construction au Québec avec 35+ modules intégrés et 61 experts IA spécialisés.",
         "url": "https://constructoai.ca",
         "author": {
             "@type": "Person",
@@ -2015,7 +2015,7 @@
             <h1>Constructo AI</h1>
             <p class="hero-subtitle">L'ERP qui comprend votre métier d'entrepreneur au Québec</p>
             <p class="hero-description">
-                Centralisez vos opérations avec une solution intégrée. <strong>34+ modules conçus pour l'industrie de la construction</strong> : Soumissions avec 140+ items prédéfinis, Suivi de projets en temps réel, Comptabilité TPS/TVQ automatisée, Pointage des 61 postes CCQ, Gestion des sous-traitants et fournisseurs, Inventaire de matériaux, Immobilier et financement construction, Subventions Québec 2025, Qualification de prospects (B.A.T.), Fonds de prévoyance Loi 16, Gantt et Kanban.
+                Centralisez vos opérations avec une solution intégrée. <strong>35+ modules conçus pour l'industrie de la construction</strong> : Soumissions avec 140+ items prédéfinis, Suivi de projets en temps réel, Comptabilité TPS/TVQ automatisée, Pointage des 61 postes CCQ, Gestion des sous-traitants et fournisseurs, Inventaire de matériaux, Immobilier et financement construction, Subventions Québec 2025, Qualification de prospects (B.A.T.), Fonds de prévoyance Loi 16, Gantt et Kanban.
             </p>
             <p class="hero-description" style="margin-top: -15px;">
                 <strong>61 experts IA spécialisés</strong> — l'équivalent d'un estimateur, d'un comptable et d'un directeur de chantier disponibles en permanence. <strong>100% conforme</strong> aux exigences RBQ, CCQ et CNESST. Concentrez-vous sur vos projets, nous gérons l'administratif.
@@ -2146,7 +2146,7 @@
     <section class="solution-section" id="fonctionnalites">
         <div class="solution-inner">
             <h2 class="section-title">Des outils numériques adaptés à votre réalité</h2>
-            <p class="section-subtitle">34+ modules développés spécifiquement pour les professionnels de la construction</p>
+            <p class="section-subtitle">35+ modules développés spécifiquement pour les professionnels de la construction</p>
             <h3>Les fonctionnalités essentielles au quotidien</h3>
 
             <div class="features-grid">
@@ -2249,6 +2249,19 @@
                     </div>
                     <h4>🏗️ Immobilier & Financement <span style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; font-size: 0.7em; padding: 2px 6px; border-radius: 4px; margin-left: 6px;">NOUVEAU</span></h4>
                     <p>Gestion complète projets construction multi-logements : prospection terrains, financement bancaire (7 banques québécoises), déblocages progressifs, calcul SCHL, suivi locations/ventes. Expert IA Claude Opus 4.5 pour analyse projets, optimisation financement et conseils construction.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M2 20h20"/>
+                            <path d="M5 20V8l7-5 7 5v12"/>
+                            <path d="M9 20v-6h6v6"/>
+                            <path d="M9 12h6"/>
+                            <path d="M12 8v4"/>
+                        </svg>
+                    </div>
+                    <h4>🏗️ Charge Tributaire <span style="background: linear-gradient(135deg, #f97316 0%, #ea580c 100%); color: white; font-size: 0.7em; padding: 2px 6px; border-radius: 4px; margin-left: 6px;">NOUVEAU</span></h4>
+                    <p>Calculs structuraux conformes CNBC 2020, CSA O86 et S16. Linteaux, poutres (bois 2x4-2x12, LVL, Glulam, acier W8-W18, HSS), solives de plancher, chevrons de toit, poteaux muraux. Charges de neige pour 10 régions du Québec. Dimensionnement automatique optimal.</p>
                 </div>
             </div>
         </div>
@@ -2652,7 +2665,7 @@
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>Tout. Les 34+ modules (soumissions, projets, facturation, pointage, inventaire, immobilier, etc.), les 61 experts IA pour vos questions techniques, votre espace privé sécurisé, le support téléphone, les mises à jour. <strong>Tous vos employés peuvent l'utiliser</strong> — pas de frais par utilisateur. C'est votre bureau complet dans le cloud.</p>
+                    <p>Tout. Les 35+ modules (soumissions, projets, facturation, pointage, inventaire, immobilier, etc.), les 61 experts IA pour vos questions techniques, votre espace privé sécurisé, le support téléphone, les mises à jour. <strong>Tous vos employés peuvent l'utiliser</strong> — pas de frais par utilisateur. C'est votre bureau complet dans le cloud.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -2912,7 +2925,7 @@
                         <img src="logo.png" alt="Constructo AI" style="width: 36px; height: auto;">
                         Constructo AI
                     </a>
-                    <p>Le système de gestion bâti par un entrepreneur, pour les entrepreneurs. 34+ modules pour gérer vos chantiers, 61 experts IA de la construction, 100% conforme RBQ, CCQ et Loi 16.</p>
+                    <p>Le système de gestion bâti par un entrepreneur, pour les entrepreneurs. 35+ modules pour gérer vos chantiers, 61 experts IA de la construction, 100% conforme RBQ, CCQ et Loi 16.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Explorer</h4>
