--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Constructo AI | ERP Construction Québec - Gestion de chantiers</title>
-    <meta name="description" content="Constructo AI est un système ERP complet pour la construction au Québec. Prêt en 5 minutes, inscription incluse. 35+ modules intégrés, 61 experts IA spécialisés, 100% conforme RBQ, CCQ et Loi 16. Essai gratuit 7 jours.">
+    <meta name="description" content="Constructo AI est un système ERP complet pour la construction au Québec. Prêt en 5 minutes, inscription incluse. 27+ modules intégrés, 61 experts IA spécialisés, 207+ tables PostgreSQL, 100% conforme RBQ, CCQ et Loi 16. Essai gratuit 7 jours.">
     <meta name="keywords" content="ERP construction, logiciel construction Québec, gestion projet construction, devis construction, comptabilité construction, RBQ, CCQ, Loi 16, IA construction, Constructo AI, logiciel entrepreneur, soumission construction, gestion chantier">
     <meta name="author" content="Sylvain Leduc - Constructo AI Inc.">
     <meta name="robots" content="index, follow">
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://constructoai.ca/">
     <meta property="og:title" content="Constructo AI | ERP intelligent pour la construction au Québec">
-    <meta property="og:description" content="Gérez votre entreprise de construction avec 35+ modules intégrés et 61 experts IA. 100% conforme RBQ, CCQ, Loi 16. Essai 7 jours.">
+    <meta property="og:description" content="Gérez votre entreprise de construction avec 27+ modules intégrés, 61 experts IA et 207+ tables PostgreSQL. 100% conforme RBQ, CCQ, Loi 16. Essai 7 jours.">
     <meta property="og:image" content="https://constructoai.ca/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://constructoai.ca/">
     <meta name="twitter:title" content="Constructo AI | ERP intelligent pour la construction au Québec">
-    <meta name="twitter:description" content="Gérez votre entreprise de construction avec 35+ modules intégrés et 61 experts IA. 100% conforme RBQ, CCQ, Loi 16.">
+    <meta name="twitter:description" content="Gérez votre entreprise de construction avec 27+ modules intégrés, 61 experts IA et 207+ tables PostgreSQL. 100% conforme RBQ, CCQ, Loi 16.">
     <meta name="twitter:image" content="https://constructoai.ca/og-image.png">
     <meta name="twitter:site" content="@constructoai">
 
@@ -43,7 +43,7 @@
         "name": "Constructo AI",
         "applicationCategory": "BusinessApplication",
         "operatingSystem": "Web",
-        "description": "Système ERP complet pour la construction au Québec avec 35+ modules intégrés et 61 experts IA spécialisés.",
+        "description": "Système ERP complet pour la construction au Québec avec 27+ modules intégrés, 61 experts IA spécialisés et 207+ tables PostgreSQL.",
         "url": "https://constructoai.ca",
         "author": {
             "@type": "Person",
@@ -2015,7 +2015,7 @@
             <h1>Constructo AI</h1>
             <p class="hero-subtitle">L'ERP qui comprend votre métier d'entrepreneur au Québec</p>
             <p class="hero-description">
-                Centralisez vos opérations avec une solution intégrée. <strong>35+ modules conçus pour l'industrie de la construction</strong> : Soumissions avec 140+ items prédéfinis, Suivi de projets en temps réel, Comptabilité TPS/TVQ automatisée, Pointage des 61 postes CCQ, Gestion des sous-traitants et fournisseurs, Inventaire de matériaux, Immobilier et financement construction, Subventions Québec 2025, Qualification de prospects (B.A.T.), Fonds de prévoyance Loi 16, Gantt et Kanban.
+                Centralisez vos opérations avec une solution intégrée. <strong>27+ modules conçus pour l'industrie de la construction</strong> : Soumissions avec 140+ items prédéfinis, Suivi de projets en temps réel, Comptabilité TPS/TVQ automatisée, Pointage des 61 postes CCQ, Gestion des sous-traitants et fournisseurs, Inventaire de matériaux, Immobilier et financement construction, Subventions Québec 2025, Qualification de prospects (B.A.T.), Fonds de prévoyance Loi 16, Gantt et Kanban, <strong>Portail Client B2B</strong>, Visualiseur CAO 3D (STL, DXF, IFC), Gestionnaire d'emails et Notes terrain avec IA.
             </p>
             <p class="hero-description" style="margin-top: -15px;">
                 <strong>61 experts IA spécialisés</strong> — l'équivalent d'un estimateur, d'un comptable et d'un directeur de chantier disponibles en permanence. <strong>100% conforme</strong> aux exigences RBQ, CCQ et CNESST. Concentrez-vous sur vos projets, nous gérons l'administratif.
@@ -2047,12 +2047,12 @@
 
             <div class="stats-grid">
                 <div class="stat-item">
-                    <div class="stat-number">35+</div>
+                    <div class="stat-number">27+</div>
                     <div class="stat-label">Modules pour vos chantiers</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">140+</div>
-                    <div class="stat-label">Items soumission prêts</div>
+                    <div class="stat-number">207+</div>
+                    <div class="stat-label">Tables PostgreSQL</div>
                 </div>
                 <div class="stat-item">
                     <div class="stat-number">61</div>
@@ -2146,7 +2146,7 @@
     <section class="solution-section" id="fonctionnalites">
         <div class="solution-inner">
             <h2 class="section-title">Des outils numériques adaptés à votre réalité</h2>
-            <p class="section-subtitle">35+ modules développés spécifiquement pour les professionnels de la construction</p>
+            <p class="section-subtitle">27+ modules développés spécifiquement pour les professionnels de la construction</p>
             <h3>Les fonctionnalités essentielles au quotidien</h3>
 
             <div class="features-grid">
@@ -2263,6 +2263,42 @@
                     <h4>🏗️ Charge Tributaire <span style="background: linear-gradient(135deg, #f97316 0%, #ea580c 100%); color: white; font-size: 0.7em; padding: 2px 6px; border-radius: 4px; margin-left: 6px;">NOUVEAU</span></h4>
                     <p>Calculs structuraux conformes CNBC 2020, CSA O86 et S16. Linteaux, poutres (bois 2x4-2x12, LVL, Glulam, acier W8-W18, HSS), solives de plancher, chevrons de toit, poteaux muraux. Charges de neige pour 10 régions du Québec. Dimensionnement automatique optimal.</p>
                 </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                            <circle cx="9" cy="7" r="4"/>
+                            <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                            <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                        </svg>
+                    </div>
+                    <h4>👥 Portail Client B2B <span style="background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%); color: white; font-size: 0.7em; padding: 2px 6px; border-radius: 4px; margin-left: 6px;">NOUVEAU</span></h4>
+                    <p>Vos clients accèdent à leur espace privé sécurisé. Suivi de projet en temps réel, approbation de devis par lien tokenisé, téléchargement de documents (PDF factures, BT), messagerie directe. Interface mobile responsive.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/>
+                            <polyline points="7.5,4.21 12,6.81 16.5,4.21"/>
+                            <polyline points="7.5,19.79 7.5,14.6 3,12"/>
+                            <polyline points="21,12 16.5,14.6 16.5,19.79"/>
+                            <polyline points="3.27,6.96 12,12.01 20.73,6.96"/>
+                            <line x1="12" y1="22.08" x2="12" y2="12"/>
+                        </svg>
+                    </div>
+                    <h4>🔧 Visualiseur CAO 3D <span style="background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%); color: white; font-size: 0.7em; padding: 2px 6px; border-radius: 4px; margin-left: 6px;">NOUVEAU</span></h4>
+                    <p>Visualisez vos fichiers CAO directement dans l'application. Support des formats STL, OBJ, DXF (AutoCAD), STEP et IFC. Rotation 3D, zoom, mesures. Idéal pour révision de plans avec vos clients et sous-traitants.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                            <polyline points="22,6 12,13 2,6"/>
+                        </svg>
+                    </div>
+                    <h4>📧 Gestionnaire d'Emails <span style="background: linear-gradient(135deg, #ec4899 0%, #db2777 100%); color: white; font-size: 0.7em; padding: 2px 6px; border-radius: 4px; margin-left: 6px;">NOUVEAU</span></h4>
+                    <p>Centralisez vos communications. Envoi automatisé de notifications (devis, factures, rappels), synchronisation IMAP avec Office365, historique complet par projet et client. Templates personnalisables.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -2331,7 +2367,7 @@
                 </svg>
                 61 experts IA spécialisés en construction
             </h2>
-            <p style="color: rgba(255,255,255,0.8); margin-bottom: 24px;">Posez vos questions techniques — estimation, normes, méthodes — et obtenez des réponses précises de professionnels du secteur</p>
+            <p style="color: rgba(255,255,255,0.8); margin-bottom: 24px;">Posez vos questions techniques — estimation, normes, méthodes — et obtenez des réponses précises de professionnels du secteur. <strong>Mémoire persistante</strong> (6 répertoires), <strong>analyse de 27 formats</strong> de fichiers (PDF, CAO, images), <strong>CRUD en langage naturel</strong> sur 20+ tables, <strong>recherche web temps réel</strong> région Québec.</p>
             <div class="experts-grid">
                 <div class="expert-item">
                     <strong>Entrepreneur Général</strong> - <span>Estimation détaillée 225-550$/pi² avec ventilation main-d'œuvre/matériaux. Code de construction, Novoclimat, LEED. Coordination des 10 corps de métier.</span>
@@ -2665,7 +2701,7 @@
                     <svg class="faq-chevron" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg>
                 </div>
                 <div class="faq-answer">
-                    <p>Tout. Les 35+ modules (soumissions, projets, facturation, pointage, inventaire, immobilier, etc.), les 61 experts IA pour vos questions techniques, votre espace privé sécurisé, le support téléphone, les mises à jour. <strong>Tous vos employés peuvent l'utiliser</strong> — pas de frais par utilisateur. C'est votre bureau complet dans le cloud.</p>
+                    <p>Tout. Les 27+ modules (soumissions, projets, facturation, pointage, inventaire, immobilier, portail client B2B, visualiseur CAO 3D, gestionnaire d'emails, etc.), les 61 experts IA pour vos questions techniques avec mémoire persistante et analyse de fichiers, votre espace privé sécurisé avec 207+ tables PostgreSQL, le support téléphone, les mises à jour. <strong>Tous vos employés peuvent l'utiliser</strong> — pas de frais par utilisateur. C'est votre bureau complet dans le cloud.</p>
                 </div>
             </div>
             <div class="faq-item">
@@ -2925,7 +2961,7 @@
                         <img src="logo.png" alt="Constructo AI" style="width: 36px; height: auto;">
                         Constructo AI
                     </a>
-                    <p>Le système de gestion bâti par un entrepreneur, pour les entrepreneurs. 35+ modules pour gérer vos chantiers, 61 experts IA de la construction, 100% conforme RBQ, CCQ et Loi 16.</p>
+                    <p>Le système de gestion bâti par un entrepreneur, pour les entrepreneurs. 27+ modules pour gérer vos chantiers, 61 experts IA de la construction, 207+ tables PostgreSQL, 100% conforme RBQ, CCQ et Loi 16.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Explorer</h4>
