--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Constructo AI</title>
+    <title>Constructo AI | ERP Construction Québec - Gestion de chantiers</title>
     <meta name="description" content="Constructo AI : le logiciel de gestion tout-en-un pour les entrepreneurs en construction au Québec. Soumissions, facturation, suivi de chantiers, pointage CCQ, gestion d'équipe. 33+ modules, 61 conseillers IA disponibles 24/7. Conforme RBQ, CCQ et Loi 16. Essai gratuit 7 jours.">
     <meta name="keywords" content="ERP construction, logiciel construction Québec, gestion projet construction, devis construction, comptabilité construction, RBQ, CCQ, Loi 16, IA construction, Constructo AI, logiciel entrepreneur, soumission construction, gestion chantier">
     <meta name="author" content="Sylvain Leduc - Constructo AI Inc.">
@@ -31,9 +31,13 @@
     <meta name="twitter:image" content="https://constructoai.ca/og-image.png">
     <meta name="twitter:site" content="@constructoai">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="logo.png">
-    <link rel="apple-touch-icon" href="logo.png">
+    <!-- Favicon - URLs absolues pour Google -->
+    <link rel="icon" type="image/png" sizes="32x32" href="https://constructoai.ca/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://constructoai.ca/logo.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://constructoai.ca/logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://constructoai.ca/logo.png">
+    <link rel="shortcut icon" href="https://constructoai.ca/logo.png">
+    <link rel="manifest" href="https://constructoai.ca/manifest.json">
 
     <!-- Données structurées Schema.org -->
     <script type="application/ld+json">
