--- a/index.html
+++ b/index.html
@@ -2336,7 +2336,7 @@
         <div class="soumissions-inner">
             <div class="section-header">
                 <h2 class="section-title">3 façons de faire vos soumissions</h2>
-                <p class="section-subtitle">Choisissez ce qui vous convient le mieux, ou combinez les trois selon le projet</p>
+                <p class="section-subtitle">Choisissez la méthode qui vous convient — ou combinez-les selon le projet</p>
             </div>
 
             <div class="soumissions-grid">
@@ -2348,8 +2348,8 @@
                         </svg>
                     </div>
                     <span class="method-number">1</span>
-                    <h3>Vous entrez vos prix</h3>
-                    <p>Vous connaissez vos coûts? Entrez-les directement. Plus de 140 items de construction déjà prêts, classés en 8 catégories. Ajustez vos marges comme vous voulez. Simple et rapide.</p>
+                    <h3>Saisie manuelle</h3>
+                    <p>Vous connaissez vos prix? Entrez vos items directement avec notre base de 140+ items de construction. Simple et rapide.</p>
                 </div>
 
                 <div class="soumission-method">
@@ -2361,8 +2361,8 @@
                         </svg>
                     </div>
                     <span class="method-number">2</span>
-                    <h3>Demandez à un conseiller</h3>
-                    <p>Envoyez vos plans ou vos photos de chantier à nos 61 conseillers. Ils vous donnent des estimations, des conseils techniques et répondent à vos questions. Disponibles jour et nuit.</p>
+                    <h3>Estimation par IA</h3>
+                    <p>Décrivez votre projet en quelques mots et l'IA génère une estimation complète avec main-d'œuvre, matériaux et marges. En 30 secondes.</p>
                 </div>
 
                 <div class="soumission-method">
@@ -2376,8 +2376,8 @@
                         </svg>
                     </div>
                     <span class="method-number">3</span>
-                    <h3>Mesurez sur les plans</h3>
-                    <p>Téléversez vos plans d'architecte et mesurez directement à l'écran. Murs, planchers, ouvertures — les quantités se calculent automatiquement. Transférez le tout dans votre soumission en un clic.</p>
+                    <h3>Métré sur plans PDF</h3>
+                    <p>Uploadez vos plans d'architecte et mesurez directement à l'écran. Murs, planchers, ouvertures — tout se calcule automatiquement.</p>
                 </div>
             </div>
         </div>
@@ -2393,44 +2393,44 @@
                     <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
                     <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
                 </svg>
-                61 conseillers spécialisés en construction
+                61 experts IA spécialisés en construction
             </h2>
-            <p style="color: rgba(255,255,255,0.8); margin-bottom: 24px;">Posez vos questions techniques — estimations, normes, méthodes de travail — et obtenez des réponses de professionnels du métier. Ils se souviennent de vos conversations, peuvent analyser vos plans et photos, et font des recherches sur le web pour vous donner l'information la plus à jour.</p>
+            <p style="color: rgba(255,255,255,0.8); margin-bottom: 24px;">Posez vos questions techniques — estimation, normes, méthodes — et obtenez des réponses précises de professionnels du secteur</p>
             <div class="experts-grid">
                 <div class="expert-item">
-                    <strong>Entrepreneur Général</strong> - <span>Vous donne des estimations détaillées avec le coût de main-d'œuvre et des matériaux. Connaît le Code du bâtiment, Novoclimat et LEED. Vous aide à coordonner vos sous-traitants.</span>
+                    <strong>Entrepreneur Général</strong> - <span>Estimation détaillée 225-550$/pi² avec ventilation main-d'œuvre/matériaux. Code de construction, Novoclimat, LEED. Coordination des 10 corps de métier.</span>
                 </div>
                 <div class="expert-item">
-                    <strong>Plombier</strong> - <span>Connaît le Code de plomberie du Québec, le chauffage hydronique, les planchers radiants. Certifié gaz naturel et propane. Vous donne des prix pour vos soumissions.</span>
+                    <strong>Plombier</strong> - <span>Licence RBQ maître plombier, membre CMMTQ. Code de plomberie du Québec, chauffage hydronique, planchers radiants, certifié gaz naturel/propane. Liste de prix intégrée.</span>
                 </div>
                 <div class="expert-item">
-                    <strong>Électricien</strong> - <span>Connaît les normes Hydro-Québec. Panneaux électriques, bornes de recharge pour véhicules électriques, panneaux solaires, domotique. Prix des matériaux à jour.</span>
+                    <strong>Électricien</strong> - <span>Licence RBQ maître électricien, CMEQ, formation Hydro-Québec. Panneaux 100A-200A, bornes de recharge VÉ, panneaux solaires, domotique. Prix matériaux 2025.</span>
                 </div>
                 <div class="expert-item">
-                    <strong>Revêtement Extérieur</strong> - <span>Vinyle, fibrociment, brique, pierre — il connaît tous les matériaux. Vous conseille sur l'installation, le drainage et les jonctions critiques.</span>
+                    <strong>Revêtement Extérieur</strong> - <span>Écran pare-pluie, vinyle, fibrociment, brique, pierre. Ventilation cavité, drainage intégré, jonctions critiques. Normes manufacturiers.</span>
                 </div>
                 <div class="expert-item">
-                    <strong>Finition Intérieure</strong> - <span>Gypse, tirage de joints, planchers de bois franc ou vinyle, moulures. Vous aide à estimer vos travaux de finition avec précision.</span>
+                    <strong>Finition Intérieure</strong> - <span>ASP Construction, cartes CCQ. Gypse niveaux 1-5, tirage de joints machine, planchers bois franc/LVP, moulures, faux-finis artistiques.</span>
                 </div>
                 <div class="expert-item">
-                    <strong>Charpente et Structure</strong> - <span>Poutrelles, fermes de toit, murs préfabriqués, poutres. Vous aide à calculer les dimensions nécessaires et à optimiser vos coûts.</span>
+                    <strong>Structure de Bois</strong> - <span>Expert CSA O86. Poutrelles, fermes de toit, murs préfabriqués, poutres LVL. Calcul des charges résidentiel/commercial, optimisation des coûts. Liste de prix complète intégrée.</span>
                 </div>
                 <div class="expert-item">
-                    <strong>Chauffage et Climatisation</strong> - <span>Thermopompes, échangeurs d'air, géothermie, bi-énergie. Vous aide à calculer les besoins de chauffage et à choisir le bon système.</span>
+                    <strong>CVC / HVAC</strong> - <span>Membre CETAF, normes ASHRAE. Thermopompes air-air/air-eau, VRC/VRE, géothermie, bi-énergie. Calculs charges thermiques, zonage multiple, contrôles WiFi.</span>
                 </div>
                 <div class="expert-item">
-                    <strong>Toiture</strong> - <span>Bardeaux d'asphalte, membrane, toit de métal. Connaît les particularités du Québec : neige, glace, ventilation. Vous aide à bien estimer vos travaux.</span>
+                    <strong>Toiture</strong> - <span>Normes AMCQ. Bardeaux asphalte, membrane élastomère, TPO/EPDM, métal architectural. Protection neige/glace Québec, ventilation optimale, imagerie thermique.</span>
                 </div>
             </div>
-            <p class="experts-more">+ 52 autres conseillers disponibles : Architecte, Ingénieur en structure, Fondations, Excavation, Maçonnerie, Portes et Fenêtres, Armoires de cuisine, Peintre, Escaliers, Conformité RBQ/CCQ, Estimateur, Subventions Québec, Fonds de prévoyance (Loi 16)...</p>
+            <p class="experts-more">+ 52 autres experts disponibles: Architecte, Ingénieur structure, Fondations, Excavation, Maçonnerie, Portes & Fenêtres, Armoires cuisine, Peintre, Escaliers, Conformité RBQ/CCQ, Estimateur, Subventions Québec, Fonds de prévoyance (Loi 16)...</p>
         </div>
     </section>
 
     <!-- How it works -->
     <section class="how-section">
-        <h2>Du premier appel jusqu'au paiement final</h2>
-        <p class="subtitle">Tout votre processus de travail, du début à la fin</p>
-        <p class="description">Appel du client → Soumission → Contrat signé → Planification de l'équipe → Suivi du chantier → Facturation → Paiement reçu. Tout est relié automatiquement.</p>
+        <h2>Du premier contact jusqu'au paiement final</h2>
+        <p class="subtitle">Un processus intégré qui reflète votre flux de travail réel</p>
+        <p class="description">Demande client → Soumission rapide → Contrat signé → Planification des ressources → Suivi de chantier → Facturation → Encaissement. L'ensemble synchronisé automatiquement.</p>
     </section>
 
     <!-- Demo Section -->
