--- a/index.html
+++ b/index.html
@@ -2080,8 +2080,31 @@
                             <line x1="16" y1="17" x2="8" y2="17"/>
                         </svg>
                     </div>
-                    <h4>Soumissions rapides</h4>
-                    <p>Faites vos soumissions en moins d'une heure. Plus de 140 items de construction déjà prêts. Les frais d'administration, les contingences et votre profit sont calculés automatiquement. TPS/TVQ incluses. Envoyez le tout à votre client en un clic.</p>
+                    <h4>Soumission manuelle</h4>
+                    <p>Vous connaissez vos prix? Entrez vos items directement avec notre base de 140+ items de construction. Les frais d'administration, les contingences et votre profit sont calculés automatiquement. TPS/TVQ incluses. Simple et rapide.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M12 2a10 10 0 1 0 10 10H12V2z"/>
+                            <path d="M12 2a10 10 0 0 1 10 10"/>
+                            <circle cx="12" cy="12" r="3"/>
+                        </svg>
+                    </div>
+                    <h4>Estimation par IA</h4>
+                    <p>Décrivez votre projet en quelques mots et l'IA génère une estimation complète en 30 secondes. Main-d'œuvre, matériaux et marges calculés automatiquement. 61 experts spécialisés disponibles 24/7 pour répondre à vos questions techniques.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                            <polyline points="14,2 14,8 20,8"/>
+                            <line x1="9" y1="15" x2="15" y2="15"/>
+                            <line x1="12" y1="12" x2="12" y2="18"/>
+                        </svg>
+                    </div>
+                    <h4>Métré sur plans PDF</h4>
+                    <p>Téléversez vos plans d'architecte et mesurez directement à l'écran. Murs, planchers, ouvertures — les quantités se calculent automatiquement. Transférez le tout dans votre soumission en un clic.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
