--- a/index.html
+++ b/index.html
@@ -2210,6 +2210,83 @@
                 <div class="feature-card">
                     <div class="feature-icon">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <rect x="2" y="6" width="20" height="12" rx="2"/>
+                            <path d="M12 6V2"/>
+                            <path d="M6 6V4"/>
+                            <path d="M18 6V4"/>
+                            <path d="M2 12h20"/>
+                        </svg>
+                    </div>
+                    <h4>Calcul Béton et Fondations</h4>
+                    <p>Calculez vos volumes de béton pour semelles, dalles, murs et colonnes selon la norme CSA A23.1. Résistance 25-35 MPa, armatures, coffrage. Quantités de gravier, sable et ciment. Temps de cure selon la température.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M3 21h18"/>
+                            <path d="M5 21V7l7-4 7 4v14"/>
+                            <path d="M5 7l7 4 7-4"/>
+                            <path d="M12 11v10"/>
+                        </svg>
+                    </div>
+                    <h4>Calcul Toiture</h4>
+                    <p>Calculez vos surfaces de toiture, pentes, fermes et matériaux. Bardeaux, membrane élastomère, tôle ou TPO — quantités exactes avec 10% de perte. Ventilation d'entretoit et protection neige/glace incluses. Normes AMCQ.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M4 19h4v-7H4v7z"/>
+                            <path d="M10 19h4v-11H10v11z"/>
+                            <path d="M16 19h4v-15H16v15z"/>
+                            <path d="M2 19h20"/>
+                        </svg>
+                    </div>
+                    <h4>Calcul Escaliers</h4>
+                    <p>Calculez vos escaliers selon le Code du bâtiment du Québec. Girons, contremarches, volées et paliers — le logiciel valide automatiquement les dimensions. Bois, béton ou acier. Garde-corps et mains courantes inclus.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/>
+                        </svg>
+                    </div>
+                    <h4>Calcul Électricité</h4>
+                    <p>Calculez vos charges électriques selon le Code canadien de l'électricité. Panneau 100A-400A, circuits, calibre de fils, prises et luminaires. Calcul de charge résidentiel et commercial. Conforme CSA C22.1.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M12 2v6"/>
+                            <path d="M12 22v-6"/>
+                            <circle cx="12" cy="12" r="4"/>
+                            <path d="M4.93 4.93l4.24 4.24"/>
+                            <path d="M14.83 14.83l4.24 4.24"/>
+                            <path d="M2 12h6"/>
+                            <path d="M16 12h6"/>
+                            <path d="M4.93 19.07l4.24-4.24"/>
+                            <path d="M14.83 9.17l4.24-4.24"/>
+                        </svg>
+                    </div>
+                    <h4>Calcul Plomberie</h4>
+                    <p>Calculez vos réseaux de plomberie selon le Code du Québec. Diamètres de tuyaux, pentes d'évacuation, unités de charge. Eau chaude, eau froide, ventilation. Chauffe-eau et systèmes de drainage. Membre CMMTQ.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M12 2a3 3 0 0 0-3 3v1a3 3 0 0 0 6 0V5a3 3 0 0 0-3-3z"/>
+                            <path d="M6 8h12"/>
+                            <path d="M5 8v8a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V8"/>
+                            <path d="M9 22v-4"/>
+                            <path d="M15 22v-4"/>
+                            <path d="M12 12v2"/>
+                        </svg>
+                    </div>
+                    <h4>Calcul CVC / Chauffage</h4>
+                    <p>Calculez vos charges de chauffage et climatisation selon les normes ASHRAE. Thermopompes, fournaises, VRC/VRE. BTU par pièce, conduits, zonage. Bi-énergie et géothermie. Économies d'énergie calculées automatiquement.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
                             <circle cx="9" cy="7" r="4"/>
                             <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
